# EssentialsOfCompilation

./: compiler.cabal  flake.nix
lib/Compiler/: Phases.hs
lib/Compiler/Ast/: Asm.hs  Interm.hs  Lisp.hs
lib/Compiler/Phases/: Uniquify.hs
tests/: Properties.hs  Tests.hs
