cabal-version:      3.0
name:               compiler
version:            0.1.0.0
synopsis:           Walking through Siek's book in Haskell
-- description:
homepage:           https://github.com/FunctorFactory/EssentialsOfCompilation
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jake Shilling
maintainer:         shilling.jake@gmail.com
-- copyright:
category:           compilers
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   lib
    default-language: Haskell2010

executable compiler
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        compiler

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite compiler-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        compiler
