cabal-version:      3.0
name:               compiler
version:            0.1.0.0
synopsis:           Walking through Siek's book in Haskell
-- description:
homepage:           https://github.com/FunctorFactory/EssentialsOfCompilation
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Jake Shilling
maintainer:         shilling.jake@gmail.com
category:           compilers
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      Compiler.Ast.Lisp,
      Compiler.Ast.Interm,
      Compiler.Ast.Asm,
      Compiler.Phases.Uniquify
    build-depends:
      , base ^>=4.17.2.1
      , transformers >= 0.5.6 && < 0.6
      , containers >= 0.6.7 && < 0.7
      , lens >= 5.3.1 && < 5.4
      , generic-lens >= 2.2.2 && < 2.3
    hs-source-dirs:   lib
    default-language: Haskell2010

executable compiler
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        compiler

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite compiler-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Tests.hs
    ghc-options:      -Wall -threaded -rtsopts
    other-modules:
      Properties
    build-depends:
        , base ^>=4.17.2.1
        , compiler
        , QuickCheck
        , tasty
